fix menu height: to be vertically stretched

--- a/src/app/components/body/menu/menu.component.css
+++ b/src/app/components/body/menu/menu.component.css
@@ -1,3 +1,7 @@
+:host > cza-frame {
+  height: 100%;
+}
+
 a {
   display: block;
   text-align: center;
